--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -175,36 +175,36 @@
         });
 
         function openApp() {
-            // if (isiOS) {
-            //     if (isiPad) {
-            //         //QQ中能打开
-            //         window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
-            //     } else {
-            //         //QQ中不能打开
-            //         if (isIOSQQ) {
-            //             document.body.addEventListener('touchmove', function (e) {
-            //                 e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
-            //             }, {passive: false});
-            //             $('#coverBackview').css('display','block');
-            //         } else {
-            //             window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
-            //         }
-            //     }
-            // } else {
-            //     var ifr = document.createElement('iframe');
-            //     ifr.src = 'zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=';
-            //     ifr.style.display = 'none';
-            //     document.body.appendChild(ifr);
-            //     document.body.removeChild(ifr);
-            // }
+            if (isiOS) {
+                if (isiPad) {
+                    //QQ中能打开
+                    window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
+                } else {
+                    //QQ中不能打开
+                    if (isIOSQQ) {
+                        document.body.addEventListener('touchmove', function (e) {
+                            e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+                        }, {passive: false});
+                        $('#coverBackview').css('display','block');
+                    } else {
+                        window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
+                    }
+                }
+            } else {
+                var ifr = document.createElement('iframe');
+                ifr.src = 'zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=';
+                ifr.style.display = 'none';
+                document.body.appendChild(ifr);
+                document.body.removeChild(ifr);
+            }
         }
 
         function downLoadApp() {
-            // if (isiOS) {
-            //     window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
-            // } else {
-            //     window.location.href = "http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning";
-            // }
+            if (isiOS) {
+                window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
+            } else {
+                window.location.href = "http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning";
+            }
         }
     });
 </script>
