--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -121,7 +121,7 @@
         <!--空白容器-->
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
-            <span id="bottom_span">尚未安装家长端APP，<a id="downLoadApp" v-on:click="downApp">立即下载</a></span>
+            <span id="bottom_span">尚未安装学生端APP，<a id="downLoadApp" v-on:click="downApp">立即下载</a></span>
             <img id="share_downLoadIcon" src="./image/share_download_IconImage@2x.png">
             <a id="clickApp"><button id="bottom_btn" v-on:click="openApp">打开应用</button></a>
         </div>
